corrección y adición de mappers y request methods