@@ -1,45 +1,67 @@
 package com.jma.productoservice.service.impl;
 
 import com.jma.productoservice.dto.UsuarioDto;
+import com.jma.productoservice.entity.RolEntity;
 import com.jma.productoservice.entity.UsuarioEntity;
+import com.jma.productoservice.mapping.RolMapper;
 import com.jma.productoservice.mapping.UsuarioMapper;
+import com.jma.productoservice.repository.RolRepository;
 import com.jma.productoservice.repository.UsuarioRepository;
 import com.jma.productoservice.service.UsuarioService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 public class UsuarioServiceImpl implements UsuarioService<UsuarioDto> {
 
     private final UsuarioRepository usuarioRepository;
+    private final RolRepository rolRepository;
 
-    public UsuarioServiceImpl(UsuarioRepository usuarioRepository) {
+    @Autowired
+    public UsuarioServiceImpl(UsuarioRepository usuarioRepository,RolRepository rolRepository) {
         this.usuarioRepository = usuarioRepository;
+        this.rolRepository = rolRepository;
     }
 
 
     @Override
     public List<UsuarioDto> guardarTodos(List<UsuarioDto> list) {
-        return usuarioRepository.saveAll(list.stream()
-                .map(UsuarioMapper::mapToEntity)
-                .collect(Collectors.toList()))
-                .stream().map(UsuarioMapper::mapToDto)
-                .collect(Collectors.toList());
+        List<RolEntity> rolesEntities = list.stream().map( e -> rolRepository.findById(e.getRol().getId()).orElse(null)).toList();
+        List<UsuarioEntity> usuarioEntities = list.stream().map(UsuarioMapper::mapToEntity).toList();
+
+        for (int i = 0; i < usuarioEntities.size(); i++) {
+            usuarioEntities.get(i).setRol(rolesEntities.get(i));
+        }
+        List<UsuarioEntity> usuariossGuardados = usuarioRepository.saveAll(usuarioEntities);
+        return usuariosMapeados(usuariossGuardados);
     }
 
     @Override
     public UsuarioDto guardar(UsuarioDto object) {
 
-        UsuarioEntity usuarioEntity = usuarioRepository.save(UsuarioMapper.mapToEntity(object));
+        RolEntity rolEntity = rolRepository.findById(object.getRol().getId()).orElse(null);
 
-        return UsuarioMapper.mapToDto(usuarioEntity);
+        UsuarioEntity usuarioEntityObt = UsuarioMapper.mapToEntity(object);
+        if(object.getId()!= null){
+            usuarioEntityObt.setId(object.getId());
+        }
+
+        usuarioEntityObt.setRol(rolEntity);
+
+        UsuarioEntity usuarioEntitySaved = usuarioRepository.save(usuarioEntityObt);
+
+        return UsuarioMapper.mapToDto(usuarioEntitySaved);
     }
 
     @Override
     public List<UsuarioDto> obtenerTodos() {
-        return usuarioRepository.findAll().stream().map(UsuarioMapper::mapToDto).collect(Collectors.toList());
+
+        List<UsuarioEntity> usuarioEntities = usuarioRepository.findAll();
+
+        return usuariosMapeados(usuarioEntities);
     }
 
     @Override
@@ -54,11 +76,34 @@ public class UsuarioServiceImpl implements UsuarioService<UsuarioDto> {
 
     @Override
     public UsuarioDto obtenerPorId(Object id) {
-        return usuarioRepository.findById((Long)id).map(UsuarioMapper::mapToDto).orElse(new UsuarioDto());
+        UsuarioEntity usuarioEntity = usuarioRepository.findById((Long)id).orElse(new UsuarioEntity());
+        UsuarioDto usuarioDto = UsuarioMapper.mapToDto(usuarioEntity);
+        usuarioDto.setRol(RolMapper.mapToDto(usuarioEntity.getRol()));
+
+        return usuarioDto;
     }
 
     @Override
     public UsuarioDto actualizar(UsuarioDto object) {
+        Optional<UsuarioEntity> opcional = usuarioRepository.findById(object.getId());
+        UsuarioEntity usuario;
+
+        if(opcional.isPresent()){
+            usuario = opcional.get();
+            usuario.setAlias(object.getAlias());
+            usuario.setContrasena(object.getContrasena());
+            return UsuarioMapper.mapToDto(usuarioRepository.save(usuario));
+        }
+
         return null;
+    }
+
+    private List<UsuarioDto> usuariosMapeados(List<UsuarioEntity> usuarios) {
+        List<UsuarioDto> content = usuarios.stream().map(UsuarioMapper::mapToDto).toList();
+
+        for (int i = 0; i < content.size(); i++) {
+            content.get(i).setRol(RolMapper.mapToDto(usuarios.get(i).getRol()));
+        }
+        return content;
     }
 }
